# jcleasing

./: .gitignore  jcleasing_main.bat  main.py  pyproject.toml  requirements.txt  run.sh  run_leasing.bat
data_display/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
results/: daily-results_2023-11-08_19_21_41.json  daily-results_2023-11-09_23_42_49.json  daily-results_2023-11-10_13_02_11.json  daily-results_2023-11-13_10_35_16.json  daily-results_2023-11-14_13_53_04.json  daily-results_2023-11-14_14_25_28.json  daily-results_2023-11-14_15_19_54.json  daily-results_2023-11-19_23_21_04.json  daily-results_2023-11-20_18_53_25.json  daily-results_2023-11-21_20_21_04.json  daily-results_2023-11-22_21_53_12.json  daily-results_2023-11-25_23_45_40.json  daily-results_2023-11-26_19_04_46.json  daily-results_2023-11-27_22_52_49.json  daily-results_2023-11-28_21_53_39.json  daily-results_2023-11-29_20_00_08.json  daily-results_2023-12-01_09_46_36.json  daily-results_2023-12-01_22_31_21.json  daily-results_2023-12-02_23_39_43.json  daily-results_2023-12-04_23_27_25.json  daily-results_2023-12-05_23_04_05.json  daily-results_2023-12-06_22_20_32.json  daily-results_2023-12-07_22_22_48.json  daily-results_2024-01-02_15_23_51.json  daily-results_2024-01-07_17_14_11.json  daily-results_2024-01-14_23_27_47.json  daily-results_2024-01-23_10_18_54.json  daily-results_2024-01-23_18_02_53.json  daily-results_2024-01-25_21_31_26.json  daily-results_2024-01-26_22_02_28.json  daily-results_2024-01-28_20_49_15.json  daily-results_2024-01-29_10_28_15.json  (+2519 more)
(+49 files in other folders)
