[project]
name = "jcleasing"
version = "0.1.0"
description = "A web scraper for apartment listings"
readme = "README.md"
python = ">=3.12"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]
